--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -42,6 +42,25 @@
         
     </TableRow>
     
+     <TableRow>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/password" />
+
+        <EditText
+            android:id="@+id/passwordField"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10" 
+            android:inputType="textPassword">"
+
+        </EditText>
+        
+    </TableRow>
+    
     <TableRow>
 
         <Button
