--- a/res/layout/activity_time_table.xml
+++ b/res/layout/activity_time_table.xml
@@ -1,181 +1,19 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".GameActivity" >
 
-   <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:stretchColumns="*" 
-            android:background="#ffffff">
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+    </android.support.v4.view.ViewPager>
 
-                 
-
-       <TableRow
-           android:id="@+id/tableRow1"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content" >
-
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_span="3"
-               android:background="#b0b0b0"
-               android:gravity="center"
-               android:padding="18dip"
-               android:text="Monday"
-               android:textColor="#000"
-               android:textSize="12dp" />
-
-       </TableRow>
-
-                        <TableRow
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_horizontal" >
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="left"
-                                android:layout_span="3"
-                                android:background="#b0b0b0"
-                                android:gravity="center"
-                                android:padding="18dip"
-                                android:text="9am"
-                                android:textColor="#000"
-                                android:textSize="10dp" />
-                            
-                            
-                       </TableRow>
-                       <TableRow
-                            android:layout_height="wrap_content"
-                            android:layout_width="fill_parent"
-                            android:gravity="center_horizontal">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="left"
-                                android:layout_span="3"
-                                android:background="#b0b0b0"
-                                android:gravity="center"
-                                android:padding="15dip"
-                                android:text="10am"
-                                android:textColor="#000"
-                                android:textSize="10dp" />
-                            
-                            
-                       </TableRow>
-                       <TableRow
-                            android:layout_height="wrap_content"
-                            android:layout_width="fill_parent"
-                            android:gravity="center_horizontal">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="left"
-                                android:layout_span="3"
-                                android:background="#b0b0b0"
-                                android:gravity="center"
-                                android:padding="15dip"
-                                android:text="11am"
-                                android:textColor="#000"
-                                android:textSize="10dp" />
-                            
-                       </TableRow>
-                       <TableRow
-                            android:layout_height="wrap_content"
-                            android:layout_width="fill_parent"
-                            android:gravity="center_horizontal">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="left"
-                                android:layout_span="3"
-                                android:background="#b0b0b0"
-                                android:gravity="center"
-                                android:padding="15dip"
-                                android:text="12pm"
-                                android:textColor="#000"
-                                android:textSize="10dp" />
-                            
-                       </TableRow>
-                       <TableRow
-                            android:layout_height="wrap_content"
-                            android:layout_width="fill_parent"
-                            android:gravity="center_horizontal">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="left"
-                                android:layout_span="3"
-                                android:background="#b0b0b0"
-                                android:gravity="center"
-                                android:padding="18dip"
-                                android:text="1pm"
-                                android:textColor="#000"
-                                android:textSize="10dp" />
-                            
-                       </TableRow>
-                       <TableRow
-                            android:layout_height="wrap_content"
-                            android:layout_width="fill_parent"
-                            android:gravity="center_horizontal">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="left"
-                                android:layout_span="3"
-                                android:background="#b0b0b0"
-                                android:gravity="center"
-                                android:padding="18dip"
-                                android:text="2pm"
-                                android:textColor="#000"
-                                android:textSize="10dp" />
-                            
-                       </TableRow>
-                       <TableRow
-                            android:layout_height="wrap_content"
-                            android:layout_width="fill_parent"
-                            android:gravity="center_horizontal">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="left"
-                                android:layout_span="3"
-                                android:background="#b0b0b0"
-                                android:gravity="center"
-                                android:padding="18dip"
-                                android:text="3pm"
-                                android:textColor="#000"
-                                android:textSize="10dp" />
-                            
-                       </TableRow>
-                       <TableRow
-                            android:layout_height="wrap_content"
-                            android:layout_width="fill_parent"
-                            android:gravity="center_horizontal">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="left"
-                                android:layout_span="3"
-                                android:background="#b0b0b0"
-                                android:gravity="center"
-                                android:padding="18dip"
-                                android:text="4pm"
-                                android:textColor="#000"
-                                android:textSize="10dp" />
-                            
-                       </TableRow>
-         
-                                                
-      </TableLayout>
-</ScrollView>
+</RelativeLayout>
