--- a/res/layout/activity_add_subjects.xml
+++ b/res/layout/activity_add_subjects.xml
@@ -16,7 +16,7 @@
     <TableRow>
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/EnrolledSubject1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
