--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
     <TableRow>
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/EnrolledSubject1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/register"
@@ -45,7 +45,7 @@
      <TableRow>
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/EnrolledSubject3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/password" />
