--- a/res/layout/activity_student.xml
+++ b/res/layout/activity_student.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,64 +9,109 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StudentActivity" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <TableRow
         android:layout_weight="1"
-        android:orientation="vertical" >
+        android:paddingLeft="140dp" >
 
         <Button
             android:id="@+id/addSubjects"
             style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="addSubjects"
+            android:text="+" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/subjectRow0"
+        android:layout_weight="3"
+        android:visibility="invisible" >
+
+        <TextView
+            android:id="@+id/EnrolledSubject0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/removeSubject1"
+            style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:text="+"
-            android:onClick="addSubjects" />
+            android:onClick="removeSubject"
+            android:text="-" />
+    </TableRow>
 
-        <CheckedTextView
+    <TableRow
+        android:id="@+id/subjectRow1"
+        android:layout_weight="3"
+        android:visibility="invisible" >
+
+        <TextView
             android:id="@+id/EnrolledSubject1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-            android:checked="true"
-            android:clickable="true"
-            android:text="@string/subject1" />
+            android:layout_weight="1"
+            android:text="TextView" />
 
-        <CheckedTextView
+        <Button
+            android:id="@+id/removeSubject2"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="removeSubject"
+            android:text="-" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/subjectRow2"
+        android:layout_weight="3"
+        android:visibility="invisible" >
+
+        <TextView
             android:id="@+id/EnrolledSubject2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-            android:checked="true"
-            android:clickable="true"
-            android:text="@string/subject2" />
+            android:layout_weight="1"
+            android:text="TextView" />
 
-        <CheckedTextView
+        <Button
+            android:id="@+id/removeSubject3"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="removeSubject"
+            android:text="-" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/subjectRow3"
+        android:layout_weight="3"
+        android:visibility="invisible" >
+
+        <TextView
             android:id="@+id/EnrolledSubject3"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-            android:checked="true"
-            android:clickable="true"
-            android:text="@string/subject3" />
+            android:layout_weight="1"
+            android:text="TextView" />
 
-        <CheckedTextView
-            android:id="@+id/EnrolledSubject4"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/removeSubject4"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-            android:checked="true"
-            android:clickable="true"
-            android:text="@string/subject4" />
+            android:layout_gravity="right"
+            android:onClick="removeSubject"
+            android:text="-" />
+    </TableRow>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical" >
+    <TableRow android:layout_weight="1" >
 
         <Button
             android:id="@+id/button1"
@@ -74,14 +119,6 @@
             android:layout_height="wrap_content"
             android:onClick="showTimeTable"
             android:text="showTimeTable" />
+    </TableRow>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_weight="1"
-        android:orientation="vertical" >
-    </LinearLayout>
-
-</LinearLayout>
+</TableLayout>
