--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -2,30 +2,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradientbg"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".RegisterActivity" >
 
-    
-    
-    
     <TableRow>
 
         <TextView
             android:id="@+id/EnrolledSubject1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/register"
-            android:textSize="25sp"
-            android:layout_weight="1" />
-        
+            android:textSize="25sp" />
     </TableRow>
+
     <TableRow>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/_10Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/email" />
@@ -34,15 +32,14 @@
             android:id="@+id/emailField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10" 
-            android:inputType="textEmailAddress">
+            android:ems="10"
+            android:inputType="textEmailAddress" >
 
             <requestFocus />
         </EditText>
-        
     </TableRow>
-    
-     <TableRow>
+
+    <TableRow>
 
         <TextView
             android:id="@+id/EnrolledSubject3"
@@ -54,22 +51,20 @@
             android:id="@+id/passwordField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10" 
-            android:inputType="textPassword">"
-
+            android:ems="10"
+            android:inputType="textPassword" >
+"
         </EditText>
-        
     </TableRow>
-    
+
     <TableRow>
 
         <Button
             android:id="@+id/addSubjects"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/register" 
-            android:onClick="register"/>
-        
+            android:onClick="register"
+            android:text="@string/register" />
     </TableRow>
 
     <TextView
@@ -78,5 +73,5 @@
         android:layout_height="wrap_content"
         android:text="@string/registerInstructions"
         android:textSize="20sp" />
-    
+
 </TableLayout>
