--- a/res/layout/activity_student.xml
+++ b/res/layout/activity_student.xml
@@ -1,27 +1,44 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/gradientbg"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StudentActivity" >
 
-    <TableRow
-        android:layout_weight="1"
-        android:paddingLeft="140dp" >
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/StudentLogoutButton"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/cross"
+            android:onClick="Logout" />
+
+        <Button
+            android:id="@+id/viewAttendanceButton"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/qr"
+            android:onClick="attendClass" />
 
         <Button
             android:id="@+id/addSubjects"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_gravity="right"
+            android:background="@drawable/plus"
             android:onClick="addSubjects"
-            android:text="+" />
-    </TableRow>
+            android:layout_marginLeft="250px"/>
+
+    </LinearLayout>
 
     <TableRow
         android:id="@+id/subjectRow0"
@@ -43,6 +60,15 @@
             android:layout_gravity="right"
             android:onClick="removeSubject"
             android:text="-" />
+
+        <Button
+            android:id="@+id/modifySubject1"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="modifySubject"
+            android:text="M" />
     </TableRow>
 
     <TableRow
@@ -65,6 +91,15 @@
             android:layout_gravity="right"
             android:onClick="removeSubject"
             android:text="-" />
+
+        <Button
+            android:id="@+id/modifySubject2"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="modifySubject"
+            android:text="M" />
     </TableRow>
 
     <TableRow
@@ -87,6 +122,15 @@
             android:layout_gravity="right"
             android:onClick="removeSubject"
             android:text="-" />
+
+        <Button
+            android:id="@+id/modifySubject3"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="modifySubject"
+            android:text="M" />
     </TableRow>
 
     <TableRow
@@ -109,16 +153,33 @@
             android:layout_gravity="right"
             android:onClick="removeSubject"
             android:text="-" />
+
+        <Button
+            android:id="@+id/modifySubject4"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="modifySubject"
+            android:text="M" />
     </TableRow>
 
     <TableRow android:layout_weight="1" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/manageSubject_0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="showTimeTable"
             android:text="showTimeTable" />
+
+        <Button
+            android:id="@+id/button1"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="attendClass"
+            android:text="Attend Class" />
     </TableRow>
 
 </TableLayout>
