--- a/res/layout/activity_view_single_attendance.xml
+++ b/res/layout/activity_view_single_attendance.xml
@@ -6,6 +6,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LecturerActivity" >
+    tools:context=".ViewSingleAttendanceActivity" >
+    
+    <ListView
+        android:id="@+id/attendanceDetailsList"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+    </ListView>
 
 </RelativeLayout>
